2008-04-01 Julien "_kaze_" ROZO <julien@rozo.org>
	* z-editor/openoffice2-bin-lang-sv: new spell, swedish language pack
	  for OpenOffice.org 2

2008-03-25 Alexander Tsamutali <astsmtl@gmail.com>
	* z-games/teewars-bin: renamed to teeworlds-bin

2008-03-03 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
	* z-utils/inform: a design system for interactive fiction

2008-03-03 Alexander Tsamutali <astsmtl@gmail.com>
	* z-games/cpma: new spell, a free modification for Quake III Arena
	* z-games/osp: new spell, a free modification for Quake III Arena

2008-03-02 Alexander Tsamutali <astsmtl@gmail.com>
	* z-games/teewars-bin: new spell, a fast-paced sidescrolling
	  multiplayer-only shoot 'em up game

2008-02-25 Alexander Tsamutali <astsmtl@gmail.com>
	* z-games/ioquake3-bin: new spell, an open source Quake 3 engine

2008-02-10 Alexander Tsamutali <astsmtl@gmail.com>
	* z-games/fretsonfire-bin: new spell, a game of musical skill and fast
	  fingers

2008-02-07 Alexander Tsamutali <astsmtl@gmail.com>
	* FUNCTIONS: added grimoire_parse_iw and grimoire_exists functions from
	  games

2008-02-06 Pol Vinogradov <vin.public@gmail.com>
	* z-http/iceweasel-bin: removed deprecated spell

2008-02-03 Alexander Tsamutali <astsmtl@gmail.com>
	* FUNCTIONS: added find_and_scam, games_make_proper_binary,
	  default_games_post_install from games grimoire
	* z-games/FUNCTIONS: default_post_install is now
	  default_games_post_install
	* z-games/nerogame: new spell, Neuro-Evolving Robotic Operatives

2008-01-31 Eric Sandall <sandalle@sourcemage.org>
	* z-http/wine-gecko: Added WINE MSHTML Gecko code

2008-01-09 Thomas Orgis <sobukus@sourcemage.org>
	* z-audio/mpg123: deleted: is in main grimoire for some releases now

2008-01-07 Treeve Jelbert <treeve@sourcemage.org>
	* z-video/jasper: deleted: there is more recent version in main grimoire

2007-12-29 Pol Vinogradov <vin.public@gmail.com>
	* gurus.gpg: added my key, EBF6BC5B
	* z-editors/openoffice2-bin-lang-ru: new spell, Russian languagepack