@@ -1,0 +1,5 @@
+conflicts  j2sdk       &&
+conflicts  j2sdk-bin   &&
+conflicts  jdk1.5-bin  &&
+conflicts  jre1.5-bin  &&
+conflicts  jdk6-bin
