@@ -1,0 +1,3 @@
+# ensure the JAVA_HOME is available.
+#
+source /etc/profile.d/java.sh
