@@ -1,0 +1,1 @@
+License has already been agreed to when user gets sources seperately.
