@@ -1,0 +1,6 @@
+#!/bin/sh
+#
+JAVA_HOME=/usr/lib/J2SDKDIR
+
+export JAVA_HOME
+export PATH=$PATH:$JAVA_HOME/bin
