@@ -1,3 +1,6 @@
+2008-04-20 Julien "_kaze_" ROZO <julien@rozo.org>
+	* z-java/jre6-bin: new spell, Sun JRE version 6
+
 2008-04-01 Julien "_kaze_" ROZO <julien@rozo.org>
 	* z-editor/openoffice2-bin-lang-sv: new spell, swedish language pack
 	  for OpenOffice.org 2
